fix(launcher): support revision 32898 feed